[package]
name = "gorillas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bevy = {version="0.12", features=["dynamic_linking"]}
bevy = {version="0.12"}
bevy_rapier2d = {version="0.23"}
bevy-inspector-egui = {version="0.22"}
serde = {version="1", features=["derive"]}
serde_json = "1"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3